# MyGame_SDL

./: .gitignore  CMakeLists.txt  main.cpp
include/: Creature.h  Enemy.h  Game.h  Protagonist.h  Сreature.h
src/: Creature.cpp  Enemy.cpp  Game.cpp  Protagonist.cpp
